[package]
name = "lambda_image_hash"
version = "0.1.0"
edition = "2021"
authors = ["Jiayu Liu <jiayu@hey.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
image = "0.25.1"
image_hasher = "2.0.0"
lambda_runtime = "0.11.1"
serde = "1.0.199"
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
